@@ -1,4 +1,8 @@
-﻿drkns 09.11.2014 02:12:34 +0200 - build 4176
+﻿zg 10.11.2014 16:08:11 +0200 - build 4177
+
+1. altf8 в редакторе при отмене всё равно переходил на введённую строку.
+
+drkns 09.11.2014 02:12:34 +0200 - build 4176
 
 1. GCC.
 
